--- a/GlowGliderServer/GlowGlider.Server/GlowGlider.Server.csproj
+++ b/GlowGliderServer/GlowGlider.Server/GlowGlider.Server.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="MySql.Data" Version="6.10.6" />
   </ItemGroup>
 
   <ItemGroup>
