--- a/GlowGliderServer/GlowGlider.Shared/GlowGlider.Shared.csproj
+++ b/GlowGliderServer/GlowGlider.Shared/GlowGlider.Shared.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyticsApi.cs" />
+    <Compile Include="AnalyticsData.cs" />
     <Compile Include="HighScoreApi.cs" />
     <Compile Include="HighScoreData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
